# rox

./: .justfile  Cargo.toml
examples/: ast.rs
lox/: 01.lox  03.lox  05.lox  07.lox  08.lox  10.lox  11.lox  counter.lox
src/: class.rs  env.rs  expr.rs  func.rs  instance.rs  interpret.rs  interpreter.rs  lex.rs  lib.rs  lox.rs  main.rs  parse.rs  prelude.rs  resolver.rs  scanner.rs  stmt.rs  tree.rs  value.rs
src/tests/: interpreter.rs  mod.rs  parser.rs  test_interpret.rs  test_scan.rs
